Allows users to select a specific item to reviews
*Added search feature for the user to select which item they would like to reviews
*Removed the option for the user to write their own "Tag"
*Linked the images on the Home page to the Explore page

--- a/home.html
+++ b/home.html
@@ -50,25 +50,39 @@
         <button class="carousel-arrow left">&#9664;</button>
         <div class="homeList">
             <div class="media">
-                <img src="https://covers.openlibrary.org/b/id/8257948-M.jpg" alt="Romeo and Juliet">
+                <a href="/explore.html">
+                    <img src="https://covers.openlibrary.org/b/id/8257948-M.jpg" alt="Romeo and Juliet">
+                </a>
             </div>
             <div class="media">
-                <img src="https://covers.openlibrary.org/b/id/14653269-M.jpg" alt="Hamlet">
+                <a href="/explore.html">
+                    <img src="https://covers.openlibrary.org/b/id/14653269-M.jpg" alt="Hamlet">
+                </a>
             </div>
             <div class="media">
-                <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/nrmXQ0zcZUL8jFLrakWc90IR8z9.jpg" alt="Shutter Island">
+                <a href="/explore.html">
+                    <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/nrmXQ0zcZUL8jFLrakWc90IR8z9.jpg" alt="Shutter Island">
+                </a>
             </div>
             <div class="media">
-                <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/uDO8zWDhfWwoFdKS4fzkUJt0Rf0.jpg" alt="La La Land">
+                <a href="/explore.html">
+                    <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/uDO8zWDhfWwoFdKS4fzkUJt0Rf0.jpg" alt="La La Land">
+                </a>
             </div>
             <div class="media">
-                <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/iR1bVfURbN7r1C46WHFbwCkVve.jpg" alt="About Time">
+                <a href="/explore.html">
+                    <img src="https://media.themoviedb.org/t/p/w300_and_h450_bestv2/iR1bVfURbN7r1C46WHFbwCkVve.jpg" alt="About Time">
+                </a>
             </div>
             <div class="media">
-                <img src="https://covers.openlibrary.org/b/id/13900709-M.jpg" alt="Jane Eyre">
+                <a href="/explore.html">
+                    <img src="https://covers.openlibrary.org/b/id/13900709-M.jpg" alt="Jane Eyre">
+                </a>
             </div>
             <div class="media">
-                <img src="https://covers.openlibrary.org/b/id/12752033-M.jpg" alt="The Picture of Dorian Gray">
+                <a href="/explore.html">
+                    <img src="https://covers.openlibrary.org/b/id/12752033-M.jpg" alt="The Picture of Dorian Gray">
+                </a>
             </div>
         </div>
         <button class="carousel-arrow right">&#9654;</button>
