--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
   <section class="split-section">
         <div class="half left">
           <div class="content">
-            <h1>Rey Perez</h1>
+            <h1>Username</h1>
             <div class="icon"></div>
           </div>
         </div>
